<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="tip_time">Tip Time</string>
    <string name="enter_bill_amount">Enter bill amount</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)\n</string>
    <string name="round_up_tip">Round up tip</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount_0_00">Tip Amount: $0.00</string>
</resources>